Fix contrast issues

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -18,7 +18,7 @@
 }
 
 header, footer, .inner-box button, .call-button {
-    background-color: rgba(var(--cerulean), 0.8);
+    background-color: rgba(var(--cerulean), 1);
     color: rgba(var(--white), 1);
 }
 
